End of Section 10

--- a/DatingApp-SPA/src/app/components/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-detail/member-detail.component.html
@@ -11,11 +11,11 @@
                     </div>
                     <div>
                         <strong>Age:</strong>
-                        <p>{{user?.age}}</p>
+                        <p>{{user.age}}</p>
                     </div>
                     <div>
                         <strong>Last Active:</strong>
-                        <p>{{user?.lastActive}}</p>
+                        <p>{{user.lastActive}}</p>
                     </div>
                     <div>
                         <strong>Member Since:</strong>
