--- a/DatingApp-SPA/src/app/components/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-detail/member-detail.component.html
@@ -1,9 +1,11 @@
 <div class="container mt-4">
-    <div class="row"><h1>{{user.knownAs}}'s Profile</h1></div>
+    <div class="row">
+        <h1>{{user.knownAs}}'s Profile</h1>
+    </div>
     <div class="row">
         <div class="col-sm-4">
             <div class="card">
-                <img class="card-img-top img-thumbnail" src="{{user.photoUrl || '../../../../../../assets/user.png" alt="{{user.knownAs}}">
+                <img class="card-img-top img-thumbnail" src="{{user.photoUrl || '../../../../../../assets/user.png'}}" alt="{{user.knownAs}}">
                 <div class="card-body">
                     <div>
                         <strong>Location:</strong>
@@ -15,11 +17,11 @@
                     </div>
                     <div>
                         <strong>Last Active:</strong>
-                        <p>{{user.lastActive}}</p>
+                        <p>{{user.lastActive | timeAgo}}</p>
                     </div>
                     <div>
                         <strong>Member Since:</strong>
-                        <p>{{user.created}}</p>
+                        <p>{{user.created | date: 'mediumDate'}}</p>
                     </div>
                 </div>
                 <div class="card-footer">
